TP-1541-1551-1573 Fix favorite icon pressability, message z-index bug on hover, z-index in relation to mobile ledger, sticky-view header z-index in relation to other stuff

--- a/public/themes/custom/palvelumanuaali/components/01-atoms/buttons/_buttons.scss
+++ b/public/themes/custom/palvelumanuaali/components/01-atoms/buttons/_buttons.scss
@@ -495,7 +495,7 @@ $button-colors: (
 .search-page {
   .flag.action-flag,
   .flag.action-unflag {
-    z-index: unset;
+    z-index: 40;
   }
 }
 
@@ -510,7 +510,7 @@ $button-colors: (
 .flag.action-unflag {
     position: absolute;
     right: 48px;
-    z-index: 120;
+    z-index: 80;
     font-size: 0;
     border: 0;
     display: block;
